--- a/page4.html
+++ b/page4.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Antonym and Synonym Finder</title>
-    <link rel="stylesheet" type="text/css" href="mystyle.css">
+    <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
     <div class="nav">
